# 2024-advent-of-code

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/common/: CMakeLists.txt  inputreader.cpp  inputreader.hpp
src/day01/: CMakeLists.txt  main.cpp  part1.cpp  part1.hpp  part2.cpp  part2.hpp
src/day02/: CMakeLists.txt  main.cpp  part1.cpp  part1.hpp  part2.cpp  part2.hpp  utils.cpp  utils.hpp
src/day03/: CMakeLists.txt  main.cpp  part1.cpp  part1.hpp  part2.cpp  part2.hpp
src/day04/: CMakeLists.txt  main.cpp  part1.cpp  part1.hpp  part2.cpp  part2.hpp  utils.hpp
src/day05/: CMakeLists.txt  main.cpp  part1.cpp  part1.hpp  part2.cpp  part2.hpp  utils.hpp
